@@ -131,18 +131,6 @@ name|org
 operator|.
 name|asciidoctor
 operator|.
-name|ast
-operator|.
-name|DocumentRuby
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|asciidoctor
-operator|.
 name|extension
 operator|.
 name|Postprocessor
@@ -212,13 +200,28 @@ literal|"bottom"
 decl_stmt|;
 specifier|public
 name|CayennePostProcessor
-parameter_list|(
-name|DocumentRuby
-name|documentRuby
-parameter_list|)
+parameter_list|()
 block|{
 name|super
 argument_list|()
+expr_stmt|;
+block|}
+specifier|public
+name|CayennePostProcessor
+parameter_list|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|config
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|config
+argument_list|)
 expr_stmt|;
 block|}
 specifier|public
