@@ -425,7 +425,7 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
-				<version>2.8.9</version>
+				<version>2.18.3</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
@@ -766,7 +766,7 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.20.1</version>
+					<version>2.21.0</version>
 				</plugin>
 				<plugin>   
 					<groupId>org.apache.felix</groupId>
@@ -775,7 +775,7 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-report-plugin</artifactId>
-					<version>2.20.1</version>
+					<version>2.21.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -798,11 +798,19 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.0.0-M1</version>
+					<version>3.0.0</version>
 					<configuration>
 						<!-- Java 8 is too strict about Javadoc omissions --> 
-						<additionalparam>${javadoc.doclint.none}</additionalparam>
+						<doclint>${javadoc.doclint}</doclint>
+						<additionalOptions>${javadoc.additionalOptions}</additionalOptions>
 					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>org.apache.commons</groupId>
+							<artifactId>commons-lang3</artifactId>
+							<version>3.7</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -822,7 +830,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.20.1</version>
+                    <version>2.21.0</version>
                     <executions>
                         <execution>
                             <id>integration-test</id>
@@ -1636,7 +1644,17 @@
 				<jdk>[1.8,)</jdk>
 			</activation>
 			<properties>
-				<javadoc.doclint.none>-Xdoclint:none</javadoc.doclint.none>
+				<javadoc.doclint>none</javadoc.doclint>
+				<javadoc.additionalOptions></javadoc.additionalOptions>
+			</properties>
+		</profile>
+		<profile>
+			<id>java9-javadoc-html5</id>
+			<activation>
+				<jdk>[9,)</jdk>
+			</activation>
+			<properties>
+				<javadoc.additionalOptions>-html5</javadoc.additionalOptions>
 			</properties>
 		</profile>
 	</profiles>
